# soroban-nft-royalties

./: .gitignore  Cargo.toml  README.md  makefile
collectible/: Cargo.toml
collectible/src/: bumps.rs  contract.rs  errors.rs  events.rs  lib.rs
collectible/src/storage/: balances.rs  core.rs  items.rs  mod.rs  royalties.rs
collectible/src/tests/: mod.rs  test_balances.rs  test_buy.rs  test_core.rs  test_items.rs  test_royalties.rs  test_sell.rs  test_transfers.rs  test_utils.rs
collectible/src/utils/: balances.rs  core.rs  items.rs  mod.rs  royalties.rs
deployer/: Cargo.toml
deployer/src/: lib.rs
offer/: Cargo.toml
offer/src/: lib.rs  test.rs
royalty_indexer/: Cargo.toml
royalty_indexer/src/: lib.rs
token/: Cargo.toml
token/src/: contract.rs  event.rs  lib.rs  lib.rs.old  test.rs
token2/: Cargo.toml
token2/src/: contract.rs  event.rs  lib.rs  test.rs  types.rs
