[workspace]
resolver = "2"

members = [
    "offer",
    "token",
    "deployer",
    "royalty_indexer",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.9.1"
[workspace.dependencies.soroban-token-sdk]
version = "0.9.1"